<resources>
    <string name="app_name">Project</string>
    <string name="title_activity_nav_drawr">nav_drawr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_today">Today</string>
    <string name="menu_NewTask">New Task</string>
    <string name="menu_Week">Week</string>
    <string name="menu_All">All</string>
    <string name="menu_Search">Search</string>
    <string name="menu_Profile">Profile</string>
    <string name="menu_Logout">LogOut</string>
</resources>